--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 <button onclick="press(9)">9</button>
                 <button style="background-color: rgba(255, 255, 0, 0.511);" onclick="press('*')">*</button>
             </div>
-            <div style="text-align: right;">
+            <div >
                 <button onclick="press('.')">.</button>
                 <button onclick="press('0')">0</button>
                 <button onclick="erase()">C</button>
                 <button style="background-color: rgba(255, 255, 0, 0.331);" onclick="press('/')">/</button>
             </div>
-            <div style="text-align: right;">
+            <div >
              <button  onclick="equal()" id="equall">=</button> 
              <button style="background-color: rgba(255, 255, 0, 0.087);"  onclick="cross()" id="cross">X</button>
             </div>
